// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoneybadgerDrop Page Renders correctly with connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-content-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-115"
        >
          <h6
            class="MuiTypography-root-116 MuiTypography-h6-126 MuiTypography-colorTextPrimary-141"
          >
            DIAMOND HANDS
          </h6>
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            MEME Honeypot pt. II
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-147 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-151 makeStyles-mainPapers-148 MuiPaper-elevation0-154 MuiPaper-rounded-152"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-116 MuiTypography-body1-118"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-116 MuiTypography-h5-125"
                  >
                    <span
                      class="MuiSkeleton-root-179 MuiSkeleton-text-180 makeStyles-center-146 MuiSkeleton-pulse-183"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-116 MuiTypography-subtitle1-127"
                  >
                    <span
                      class="MuiSkeleton-root-179 MuiSkeleton-text-180 makeStyles-center-146 MuiSkeleton-pulse-183"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-116 MuiTypography-subtitle1-127"
                  >
                    <span
                      class="MuiSkeleton-root-179 MuiSkeleton-text-180 makeStyles-center-146 MuiSkeleton-pulse-183"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-219 MuiButton-root-190 MuiButton-text-192 makeStyles-learnMore-150 MuiButton-textPrimary-193 MuiButton-textSizeSmall-205 MuiButton-sizeSmall-211 MuiButton-fullWidth-213"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-191"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-226"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-223 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-content-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-224 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-179 MuiSkeleton-rect-181 makeStyles-nftSkeleton-225 MuiSkeleton-pulse-183"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-224 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-179 MuiSkeleton-rect-181 makeStyles-nftSkeleton-225 MuiSkeleton-pulse-183"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-224 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <span
                class="MuiSkeleton-root-179 MuiSkeleton-rect-181 makeStyles-nftSkeleton-225 MuiSkeleton-pulse-183"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly with connected address and a balance of NFTs 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-content-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-115"
        >
          <h6
            class="MuiTypography-root-116 MuiTypography-h6-126 MuiTypography-colorTextPrimary-141"
          >
            DIAMOND HANDS
          </h6>
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            MEME Honeypot pt. II
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-147 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-151 makeStyles-mainPapers-148 MuiPaper-elevation0-154 MuiPaper-rounded-152"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-116 MuiTypography-body1-118"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h5
                    class="MuiTypography-root-116 MuiTypography-h5-125"
                  >
                    <span
                      class="MuiSkeleton-root-179 MuiSkeleton-text-180 makeStyles-center-146 MuiSkeleton-pulse-183"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-116 MuiTypography-subtitle1-127"
                  >
                    <span
                      class="MuiSkeleton-root-179 MuiSkeleton-text-180 makeStyles-center-146 MuiSkeleton-pulse-183"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <h6
                    class="MuiTypography-root-116 MuiTypography-subtitle1-127"
                  >
                    <span
                      class="MuiSkeleton-root-179 MuiSkeleton-text-180 makeStyles-center-146 MuiSkeleton-pulse-183"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-219 MuiButton-root-190 MuiButton-text-192 makeStyles-learnMore-150 MuiButton-textPrimary-193 MuiButton-textSizeSmall-205 MuiButton-sizeSmall-211 MuiButton-fullWidth-213"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-191"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-246"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 makeStyles-holdingsTitle-223 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
          >
            <p
              class="MuiTypography-root-116 MuiTypography-body1-118"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-8-40 MuiGrid-item-12 MuiGrid-justify-content-xs-space-between-30 MuiGrid-grid-xs-12-56"
          >
            <div
              class="MuiGrid-root-10 makeStyles-nftContainer-224 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-6-64 MuiGrid-grid-lg-4-90"
            >
              <div
                class="MuiPaper-root-151 makeStyles-paper-226 MuiPaper-elevation0-154 MuiPaper-rounded-152"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
                >
                  <div
                    class="MuiGrid-root-10 makeStyles-textCenter-228 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                  >
                    <video
                      autoplay=""
                      class="makeStyles-nftImage-231"
                      loop=""
                      playsinline=""
                      preload="auto"
                      src="test.com"
                    />
                  </div>
                  <div
                    class="MuiGrid-root-10 makeStyles-statsContainer-234 MuiGrid-container-11 MuiGrid-item-12"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-235 makeStyles-soundIcon-233"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
                      />
                    </svg>
                    <div
                      class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                    >
                      <p
                        class="MuiTypography-root-116 makeStyles-textCenter-228 MuiTypography-body1-118"
                      >
                        test
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                    >
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-229 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119 MuiTypography-colorTextSecondary-142"
                          >
                            Your Balance
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119"
                          >
                            50
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-229 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119 MuiTypography-colorTextSecondary-142"
                          >
                            Remaining
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119"
                          >
                            50/50
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-229 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119 MuiTypography-colorTextSecondary-142"
                          >
                            Redemption Value (bDIGG)
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119"
                          >
                            0.00000
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-space-between-30 MuiGrid-grid-xs-12-56"
                      >
                        <div
                          class="MuiGrid-root-10 makeStyles-textStart-229 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119 MuiTypography-colorTextSecondary-142"
                          >
                            Redemption Value ($)
                          </span>
                        </div>
                        <div
                          class="MuiGrid-root-10 makeStyles-textEnd-230 MuiGrid-item-12 MuiGrid-grid-xs-6-50"
                        >
                          <span
                            class="MuiTypography-root-116 MuiTypography-caption-119"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-center-28 MuiGrid-grid-xs-12-56"
                      >
                        <button
                          class="MuiButtonBase-root-219 MuiButton-root-190 MuiButton-contained-198 makeStyles-redeemButton-227 MuiBox-root-244 MuiBox-root-245 MuiButton-containedPrimary-199"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label-191"
                          >
                            Redeem
                          </span>
                          <span
                            class="MuiTouchRipple-root-246"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly without connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-2 WithStyles(ForwardRef(Container))-root-1 MuiContainer-maxWidthLg-8"
  >
    <div
      class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33 MuiGrid-justify-content-xs-center-28"
    >
      <div
        class="MuiGrid-root-10 WithStyles(ForwardRef(Grid))-root-113 WithStyles(ForwardRef(Grid))-root-114 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="makeStyles-headerContainer-115"
        >
          <h6
            class="MuiTypography-root-116 MuiTypography-h6-126 MuiTypography-colorTextPrimary-141"
          >
            DIAMOND HANDS
          </h6>
          <p
            class="MuiTypography-root-116 MuiTypography-body2-117 MuiTypography-colorTextSecondary-142"
          >
            MEME Honeypot pt. II
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-5-37 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
      >
        <div
          class="MuiGrid-root-10 makeStyles-centerText-147 MuiGrid-container-11 MuiGrid-item-12 MuiGrid-justify-content-xs-center-28 MuiGrid-grid-xs-12-56"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56 MuiGrid-grid-sm-8-66 MuiGrid-grid-md-7-79"
          >
            <div
              class="MuiPaper-root-151 makeStyles-mainPapers-148 MuiPaper-elevation0-154 MuiPaper-rounded-152"
            >
              <div
                class="MuiGrid-root-10 MuiGrid-container-11 MuiGrid-spacing-xs-1-33"
              >
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <p
                    class="MuiTypography-root-116 MuiTypography-body1-118"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-10 MuiGrid-item-12 MuiGrid-grid-xs-12-56"
                >
                  <button
                    class="MuiButtonBase-root-208 MuiButton-root-179 MuiButton-contained-187 makeStyles-redeemButton-149 MuiButton-containedPrimary-188"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-180"
                    >
                      Check Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-211"
                    />
                  </button>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-208 MuiButton-root-179 MuiButton-text-181 makeStyles-learnMore-150 MuiButton-textPrimary-182 MuiButton-textSizeSmall-194 MuiButton-sizeSmall-200 MuiButton-fullWidth-202"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-180"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-211"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
